scrollbar style chrome 121 fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -159,30 +159,50 @@ input[type="number"] {
   background: rgb(var(--accent));
   color: rgb(var(--secondary));
 }
-* {
+/* * {
   scrollbar-width: auto;
   scrollbar-color: #bababaac transparent;
+} */
+
+/* @-moz-document url-prefix() {
+  *::-webkit-scrollbar {
+    height: 6px;
+    width: 6px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: rgb(var(--secondary));
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(var(--primbuttn));
+    border-radius: 10px;
+    border: 3px solid transparent;
+    transition: opacity 0.5s 0.5s ease-out;
+  }
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(var(--accent));
+  }
+} */
+
+/* CHROME */
+::-webkit-scrollbar {
+  width: 0.5rem;
 }
 
-*::-webkit-scrollbar {
-  height: 6px;
-  width: 6px;
-}
-
-*::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: rgb(var(--secondary));
 }
 
-*::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: rgb(var(--primbuttn));
   border-radius: 10px;
   border: 3px solid transparent;
   transition: opacity 0.5s 0.5s ease-out;
 }
-*::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(var(--accent));
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(var(--primary));
 }
-
 /* time picker */
 
 .react-ios-time-picker {
